# nonebot_plugin_russian

./: pyproject.toml
russian/: __init__.py  config.py  data_source.py  db_handler.py  game.py  model.py
