[tool.poetry]
name = "nonebot_plugin_russian"
packages = [
    {include = "russian"}
]
version = "0.2.10"
description = "Nonebot2插件 俄罗斯轮盘"
authors = ["HibiKier <775757368@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ujson = {version = ">=4.0.0", optional = true}
nonebot2 = "^2.4.0"
nonebot-adapter-onebot = "^2.4.6"
nonebot-plugin-apscheduler = "^0.5.0"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
